[package]
name = "kbots"
version = "0.1.0"
authors = ["Akiacode <catry.me@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
koreanbots = "2.0.3"
comfy-table = "2.1.0"
indicatif = "0.16.2"
colored = "2"
dialoguer = "0.8.0"